@@ -203,7 +203,7 @@ public class JsonDeserializer {
 
     private Slot parseSlot(String slot) {
         if (slot.startsWith(VAR_PREFIX)) {
-            int id = new Integer(slot.split(":")[1]);
+            int id = Integer.valueOf(slot.split(":")[1]);
             return new VariableSlot(id);
         } else {
             // TODO: THIS NEEDS FIXING
